--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Prepare environment
         run: |
           sudo apt update
-          sudo apt install -y build-essential cmake qt5-default qtbase5-dev 
+          sudo apt install -y build-essential cmake qtbase5-dev 
 
       - name: Build
         run: |
